--- a/billingorder/templates/billingorder/add_bill.html
+++ b/billingorder/templates/billingorder/add_bill.html
@@ -10,41 +10,72 @@
         <div class="card card-body">
             <h5>{% trans "Add Bill"%}</h5>
         </div>
+                    <form action="" method="post" enctype="multipart/form-data">
+
         <div class="card card-body">
 
-            <form action="" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{billingform|crispy}}
-                <input class="btn btn-primary" type="submit" name="submit">
-            </form>
+
         </div>
-        {% if billingform.errors %}
-        {% for field in billingform %}
-        {% for error in field.errors %}
-        <div class="alert alert-danger">
-            <strong>{{field.label}} {{ error|escape }}</strong>
-        </div>
-        {% endfor %}
-        {% endfor %}
-        {% for error in billingform.non_field_errors %}
-        <div class="alert alert-danger">
-            <strong>{{ error|escape }}</strong>
-        </div>
-        {% endfor %}
-        {% endif %}
+
         <div class="card card-body">
+            <h2>{% trans "Choose Customers" %}</h2>
+                    <!-- Customers Table -->
+                    <table id="table_customer" class="display text-center">
+                        <thead>
+                        <tr>
+                            <th></th>
+                            <th>{% trans "Name" %}</th>
+                            <th>{% trans "City" %}</th>
+                            <th>{% trans "Phone" %}</th>
+                            <th>{% trans "Debt" %}</th>
+
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                        {% for customer in customers %}
+                        <tr>
+                            <td>
+                                <input class="form-check-input" type="radio" value="{{customer.id}}"
+                                       id="{{customer.id}}" name="customers">
+                            </td>
+                            <td>
+                                {{customer.firstname}}
+                                {{customer.lastname}}
+                            </td>
+                            <td>
+                                {{customer.city}}
+                            </td>
+                            <td>
+                                {{customer.phone}}
+                            </td>
+                            <td>
+                                {{customer.debt}}
+                            </td>
+
+                        </tr>
+
+                        {% endfor %}
+                        </tbody>
+
+                    </table>
+                    <br>
+                    <hr>
+            <h2>{% trans "Details" %}</h2>
             <table class="table">
 
                 {% for billorder in orderbill.items.all %}
                 <thead>
                 <tr>
-                    <th>{ % trans "Order ID"%}</th>
-                    <th>{% trans "Customer"%}</th>
-                    <th>{% trans "City"%}</th>
-                    <th>{% trans "Paid"%}</th>
-                    <th>{% trans "Delivered"%}</th>
-                    <th>{% trans "Total Price"%}</th>
-                    <th>{% trans "Total Weight"%}</th>
+                    <th>{% trans "Order ID" %}</th>
+                    <th>{% trans "Customer" %}</th>
+                    <th>{% trans "City" %}</th>
+                    <th>{% trans "Paid" %}</th>
+                    <th>{% trans "Delivered" %}</th>
+                    <th>{% trans "Total Price" %}</th>
+                    <th>{% trans "Total Weight" %}</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -95,6 +126,22 @@
                 {% endfor %}
             </table>
         </div>
+                        <input class="btn btn-primary form-control" type="submit" name="submit">
+            </form>
+        {% if billingform.errors %}
+        {% for field in billingform %}
+        {% for error in field.errors %}
+        <div class="alert alert-danger">
+            <strong>{{field.label}} {{ error|escape }}</strong>
+        </div>
+        {% endfor %}
+        {% endfor %}
+        {% for error in billingform.non_field_errors %}
+        <div class="alert alert-danger">
+            <strong>{{ error|escape }}</strong>
+        </div>
+        {% endfor %}
+        {% endif %}
     </div>
 </div>
 
