--- a/buyorder/templates/buyorder/add_buyorder.html
+++ b/buyorder/templates/buyorder/add_buyorder.html
@@ -76,8 +76,8 @@
                 <hr>
                 <br>
                 <div class="row spacer">
-                    <div class="col-4 offset-2">
-                        <input class="btn btn-primary" type="submit" name="submit">
+                    <div class="col">
+                        <input class="btn btn-primary form-control" type="submit" name="submit">
                     </div>
                 </div>
             </form>
