--- a/seller/templates/sellorder/list.html
+++ b/seller/templates/sellorder/list.html
@@ -19,6 +19,7 @@
                         <th>{% trans "Paid" %}</th>
                         <th>{% trans "Total Price" %}</th>
                         <th>{% trans "Total Weight" %}</th>
+                        <th></th>
                     </tr>
                     </thead>
                     <tbody>
@@ -30,7 +31,9 @@
                         <td>{{order.paid}}</td>
                         <td>{% trans "DZD" %} {{order.get_total_cost}}</td>
                         <td>{% trans "KG" %} {{order.get_total_weight}}</td>
-
+                        <td>
+                            <a class="btn btn-warning" href="{% url 'seller:seller_sellorder_details' order.id %}">{% trans "Details" %}</a>
+                        </td>
                     </tr>
                      {% endfor %}
 
