--- a/accounts/templates/user/update_permissions.html
+++ b/accounts/templates/user/update_permissions.html
@@ -6,13 +6,40 @@
 <br>
 <div class="container">
     <div class="row">
+
+        <!-- Old Permissions -->
+        <div class="col-md">
+            <div class="card card-body">
+                <h5>{% trans "Old Permissions" %}</h5>
+            </div>
+
+        <div class="card card-body">
+                <table class=" table display text-center">
+                    <thead>
+                    <tr>
+                        <th>{% trans "Name" %}</th>
+                    </tr>
+
+                    </thead>
+                    <tbody>
+                        {% for permission in old_permissions %}
+                            <tr>
+                                <td>{{permission.name}}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+                <br>
+        </div>
+    </div>
+
+        <!-- New Permissions -->
         <div class="col-md">
             <div class="card card-body">
                 <h5>{% trans "Permissions" %}</h5>
             </div>
-
-        <div class="card card-body">
-            <form action="" method="post">
+            <div class="card card-body">
+                <form action="" method="post">
                 {% csrf_token %}
                 <table id="table_id" class="display text-center">
                     <thead>
@@ -33,11 +60,11 @@
                     </tbody>
                 </table>
                 <br>
-                                <input type="submit" class="btn btn-lg form-control bg-primary" name="Submit">
+                    <input type="submit" class="btn btn-lg form-control bg-primary" name="Submit">
                 <br>
             </form>
+            </div>
         </div>
-    </div>
 </div>
     </div>
 <script>
